--- a/GlobalCode_ExperimentalCode/GuiElement.xaml
+++ b/GlobalCode_ExperimentalCode/GuiElement.xaml
@@ -1,4 +1,4 @@
-﻿<local:SmallDecGUIElement
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -20,4 +20,4 @@
 	NotifyOnValidationError=True}"
 	HorizontalAlignment="Stretch"   HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
 	</DockPanel>
-</local:SmallDecGUIElement>
+</UserControl>
